first update of repo to save code

--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe!</title>
+    <link rel="stylesheet" href="main.css">
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    
+    <div class="top">
+        <div class="title">Tic-Tac-Toe</div>
+        <div class="players-turn">X's Turn</div>
+    </div>
+    <div class="middle">
+        <div class="X-side">
+            <div class="piecesX">X</div>
+            <img src="" alt="">
+        </div>
+        <div class="board">
+            <button class="A1"><img></button>
+            <div class="B1"><img></div>
+            <div class="C1"><img></div>
+            <div class="A2"><img></div>
+            <div class="B2"><img></div>
+            <div class="C2"><img></div>
+            <div class="A3"><img></div>
+            <div class="B3"><img></div>
+            <div class="C3"><img></div>
+        </div>
+        <div class="O-side">
+            <div class="piecesO">O</div>
+            <img src="" alt="">
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="instructions">hello</div>
+        <button class="reset"></button> 
+    </div>
 </body>
 </html>
