Update css and js code

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </div>
         <div class="board">
             <button class="A1"><img></button>
-            <div class="B1"><img></div>
-            <div class="C1"><img></div>
-            <div class="A2"><img></div>
-            <div class="B2"><img></div>
-            <div class="C2"><img></div>
-            <div class="A3"><img></div>
-            <div class="B3"><img></div>
-            <div class="C3"><img></div>
+            <button class="B1"><img></button>
+            <button class="C1"><img></button>
+            <button class="A2"><img></button>
+            <button class="B2"><img></button>
+            <button class="C2"><img></button>
+            <button class="A3"><img></button>
+            <button class="B3"><img></button>
+            <button class="C3"><img></button>
         </div>
         <div class="O-side">
             <div class="piecesO">O</div>
@@ -36,7 +36,7 @@
     </div>
     <div class="bottom">
         <div class="instructions">hello</div>
-        <button class="reset"></button> 
+        <button class="reset">reset</button> 
     </div>
 </body>
 </html>
