reset button works as well as click function for buttons

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     </div>
     <div class="middle">
         <div class="X-side">
-            <div class="piecesX">X</div>
+            <div class="piecesX">X Pieces Left</div>
             <img src="" alt="">
         </div>
         <div class="board">
-            <button class="A1"><img></button>
-            <button class="B1"><img></button>
-            <button class="C1"><img></button>
-            <button class="A2"><img></button>
-            <button class="B2"><img></button>
-            <button class="C2"><img></button>
-            <button class="A3"><img></button>
-            <button class="B3"><img></button>
-            <button class="C3"><img></button>
+            <button class="A1 box"></button>
+            <button class="B1 box"></button>
+            <button class="C1 box"></button>
+            <button class="A2 box"></button>
+            <button class="B2 box"></button>
+            <button class="C2 box"></button>
+            <button class="A3 box"></button>
+            <button class="B3 box"></button>
+            <button class="C3 box"></button>
         </div>
         <div class="O-side">
-            <div class="piecesO">O</div>
+            <div class="piecesO">O Pieces Left</div>
             <img src="" alt="">
         </div>
     </div>
