working on getting winner

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <img src="" alt="">
         </div>
         <div class="board">
-            <button class="A1 box"></button>
-            <button class="B1 box"></button>
-            <button class="C1 box"></button>
-            <button class="A2 box"></button>
-            <button class="B2 box"></button>
-            <button class="C2 box"></button>
-            <button class="A3 box"></button>
-            <button class="B3 box"></button>
-            <button class="C3 box"></button>
+            <button id="box" class="A1 box"></button>
+            <button id="box" class="B1 box"></button>
+            <button id="box" class="C1 box"></button>
+            <button id="box" class="A2 box"></button>
+            <button id="box" class="B2 box"></button>
+            <button id="box" class="C2 box"></button>
+            <button id="box" class="A3 box"></button>
+            <button id="box" class="B3 box"></button>
+            <button id="box" class="C3 box"></button>
         </div>
         <div class="O-side">
             <div class="piecesO">O Pieces Left</div>
