update some code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="middle">
         <div class="X-side">
-            <div class="piecesX">X Pieces Left</div>
+            <div class="piecesX">5 Pieces Left</div>
             <img src="" alt="">
         </div>
         <div class="board">
@@ -30,7 +30,7 @@
             <button id="box" class="C3 box"></button>
         </div>
         <div class="O-side">
-            <div class="piecesO">O Pieces Left</div>
+            <div class="piecesO">4 Pieces Left</div>
             <img src="" alt="">
         </div>
     </div>
