Adding final touches

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="middle">
         <div class="X-side">
             <div class="piecesX">5 Pieces Left</div>
-            <img src="" alt="">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/009/344/496/small/x-transparent-free-png.png"/>
         </div>
         <div class="board">
             <button id="box" class="A1 box"></button>
@@ -31,12 +31,19 @@
         </div>
         <div class="O-side">
             <div class="piecesO">4 Pieces Left</div>
-            <img src="" alt="">
+            <img id="o-img" src="https://i.imgur.com/mrTYNoE.png"/>
         </div>
     </div>
     <div class="bottom">
-        <div class="instructions">hello</div>
-        <button class="reset">reset</button> 
+        <div class="instructions">&nbsp;&nbsp;&nbsp;Instructions:
+            <ol type="1">
+                <li>The game is played on a grid that's 3 squares by 3 squares.</li>
+                <li>You are <strong>X</strong>, your friend is <strong>O</strong>. Players take turns putting their marks in empty squares.</li>
+                <li>The first player to get 3 of their marks in a row (up, down, across, or diagonally) is the winner.</li>
+                <li>When all 9 squares are full, the game is over. If no player has 3 marks in a row, the game ends in a tie or a cat's game.</li>
+            </ol> 
+        </div>
+        <button class="reset">Reset Game</button> 
     </div>
 </body>
 </html>
